# cenotoo

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  docker-compose.yaml  pyproject.toml
cassandra/: create_cassandra_tables.py
coap-bridge/: Dockerfile  coap_bridge.py  requirements.txt
docs/: gcp-deployment.md  k3s-setup.md
flink/: Dockerfile
kafka-live-consumer/: Dockerfile  consumer.py
kafka-to-cassandra/: Dockerfile  consumer.py  requirements.txt
mosquitto/: mosquitto.conf
mqtt-auth/: Dockerfile  mqtt_auth.py  requirements.txt
mqtt-bridge/: .dockerignore  Dockerfile  mqtt_bridge.py
postgres/: init.sql
scripts/: 01-install-k3s.sh  02-install-cert-manager.sh  03-install-strimzi-operator.sh  04-install-k8ssandra-operator.sh  05-install-flink-operator.sh  06-install-monitoring.sh  07-deploy-cenotoo.sh  08-deploy-api.sh  09-expose-api.sh  10-deploy-dashboard.sh  11-deploy-flink-jobs.sh  12-deploy-mqtt-bridge.sh  13-test-mqtt.sh  14-test-sse-stream.sh  15-test-device-management.sh  16-test-schema-evolution.sh  17-test-collection-metrics.sh  18-test-data-export.sh  19-test-bulk-import.sh  20-test-webhooks.sh  21-test-statistics.sh  22-deploy-coap-bridge.sh  23-test-coap.sh  24-deploy-postgres.sh  25-test-postgres.sh  build-api.sh  build-images.sh  configure-secrets.sh  generate-cluster-id.py  init-cassandra-schema.sh  init-postgres-schema.sh  install.sh  integration-test.sh  reset-admin.sh  run-all-tests.sh  smoke-test.sh
tests/: conftest.py  test_cassandra_writer.py  test_cluster_id.py  test_coap_bridge.py  (+3 more)
(+72 files in other folders)
